@@ -2,7 +2,6 @@
 #include<stdlib.h>
 #include<time.h>
 #include<endian.h>
-#include<stdint.h>
 #include<string.h>
 
 #include "dungeonGeneration.h"
@@ -166,7 +165,7 @@ void generate_stairs(dungeon_t *d){
     //> down
     char stairs[2] = {'<', '>'};
     int i, y, x;
-    d->stairs = malloc(2 * sizeof(pair_t));
+    //d->stairs = malloc(2 * sizeof(pair_t));
 
     for(i = 0; i < 2; i++){
         int room_index = rand() % d->num_rooms;
@@ -174,38 +173,37 @@ void generate_stairs(dungeon_t *d){
             y = d->rooms[room_index].y +  (rand() % d->rooms[room_index].height);
             x = d->rooms[room_index].x + (rand() % d->rooms[room_index].width);
         } while(dungeon[y][x] != ROOM);
-        d->stairs[i].x = x;
-        d->stairs[i].y = y;
+        //d->stairs[i].x = x;
+        //d->stairs[i].y = y;
         dungeon[y][x] = stairs[i];
         d->hardness[y][x] = 0;
-        d->num_stairs++;
     }
+   // d->num_up_stairs++;
+    //d->num_down_stairs++;
 }
 
 void save_dungeon(dungeon_t *d){
     char *path;
     FILE *f = fopen(path, "w");
-    uint8_t write_to8;
     uint16_t write_to16;
     uint32_t write_to32;
 
     char *semantic = "RLG327-S2025";
-    //remove null
     fwrite(semantic, 1, strlen(semantic), f);
     
 
 
-    int version = 0;
-    write_to32 = htobe32(version);
+    
+    write_to32 = htobe32(DUNGEON_VERSIONX);
     fwrite(&write_to32, sizeof(write_to32), 1, f);
 
     //integer size file
     
     //A pair of unsigned 8-bit integers giving the x and y position of the PC
-    write_to8 = (uint8_t) d->PC.x;
-    fwrite(&write_to8, sizeof(write_to8), 1, f);
-    write_to8 = (uint8_t) d->PC.y;
-    fwrite(&write_to8, sizeof(write_to8), 1, f);
+    uint8_t x = d->PC.x;
+    uint8_t y = d->PC.y;
+    fwrite(&x, 1, 1, f);
+    fwrite(&y, 1, 1, f);
     
     //The row-major dungeon matrix from top to bottom, with one byte, containing cell hardness, per cell. The hardness ranges from zero to 255, with
     //zero representing open space (room or corridor) and 255 representing immutable rock (probably only the border).
@@ -215,7 +213,6 @@ void save_dungeon(dungeon_t *d){
         }
     }
     
-
    //r, an unsigned 16-bit integer giving the number of rooms in the dungeon (2 bytes)
    write_to16 = htobe16((uint16_t)d->num_rooms);
    fwrite(&write_to16, sizeof(write_to16), 1, f);
@@ -225,15 +222,166 @@ void save_dungeon(dungeon_t *d){
     //of the room; the second byte is the y position of the upper left corner of the
     //room; the third byte is the x size (width) of the room; and the fourth byte
     //is the y size (height) of the room. r is the number of rooms in the dungeon.
+    for(int i = 0; i < d->num_rooms; i++){
+        uint8_t xpos = d->rooms[i].x;
+        uint8_t ypos = d->rooms[i].y;
+        uint8_t xdim = d->rooms[i].width;
+        uint8_t ydim = d->rooms[i].height;
 
-    //An unsigned 16-bit integer giving the number of upward staircases in the
-    //dungeon.
-    write_to16 = htobe16(1);
-    fwrite(&write_to16, sizeof(write_to16), 1, f);
-    (uint8_t) 
+        fwrite(&xpos, sizeof(uint8_t), 1, f);
+        fwrite(&ypos, sizeof(uint8_t), 1, f);
+        fwrite(&xdim, sizeof(uint8_t), 1, f);
+        fwrite(&ydim, sizeof(uint8_t), 1, f);
+    }
+
+    //saves both stairs with x and y values
+    save_stairs(d,f);
+
+    fclose(f);
+}
+
+int save_stairs(dungeon_t *d, FILE *f){
+    uint16_t numStairs;
+    numStairs = htobe16(count_up_stairs(d));
+    fwrite(&numStairs, 2, 1, f);
+    int x,y;
+    for(y = 0; y < HEIGHT; y++){
+        for(x = 0; x < WIDTH; x++){
+            if(dungeon[y][x] == '<'){
+                numStairs--;
+                fwrite(&x, 1, 1, f);
+                fwrite(&y, 1, 1, f);
+            }
+        }
+    }
+    numStairs = htobe16(count_down_stairs(d));
+    fwrite(&numStairs, 2, 1, f);
+    for(y = 0; y < HEIGHT; y++){
+        for(x = 0; x < WIDTH; x++){
+            if(dungeon[y][x] == '<'){
+                numStairs--;
+                fwrite(&x, 1, 1, f);
+                fwrite(&y, 1, 1, f);
+            }
+        }
+    }
+    return 0;
+}
+
+int count_up_stairs(dungeon_t *d){
+    int x, y, i;
+    for(y = 0; y < HEIGHT; y++){
+        for(x = 0; x < WIDTH; x++){
+            if(dungeon[y][x] == '<'){
+                i++;
+            }
+        }
+    }
+    return i;
+}
+
+int count_down_stairs(dungeon_t *d){
+    int x, y, i;
+    for(y = 0; y < HEIGHT; y++){
+        for(x = 0; x < WIDTH; x++){
+            if(dungeon[y][x] == '>'){
+                i++;
+            }
+        }
+    }
+    return i;
+}
+
+int read_dungeon_map(dungeon_t *d, FILE* f){
+    int y, x;
+
+    for(y = 0; y < HEIGHT; y++){
+        for(x = 0; x< WIDTH; x++){
+            fread(&d->hardness[y][x], 1, 1, f);
+            if(&d->hardness[y][x] == 0){
+                dungeon[y][x] = HALL;
+            } else{
+                dungeon[y][x] == ROCK;
+                //could factor in immutable
+            }
+        }
+    }
+    return 0;
+}
+
+// reads rooms from file and places them into dungeon array
+int read_rooms(dungeon_t *d, FILE *f){
+    int i, y, x;
+    uint16_t r;
+
+    fread(&r, 2, 1, f);
+    d->num_rooms = be16toh(r);
+    d->rooms = malloc(sizeof (*d->rooms) * d->num_rooms);
+
+    for(i = 0; i < d->num_rooms; i++){
+        fread(&r, 1, 1, f);
+        d->rooms[i].x = r;
+        fread(&r, 1, 1, f);
+        d->rooms[i].y = r;
+        fread(&r, 1, 1, f);
+        d->rooms[i].width = r;
+        fread(&r, 1, 1, f);
+        d->rooms[i].height = r;
 
 
+        for(y = d->rooms[i].y; y < d->rooms[i].y + d->rooms[i].height; y++){
+            for(x = d->rooms[i].x; x < d->rooms[i].x + d->rooms[i].width; x++){
+                dungeon[y][x] = ROOM;
+            }
+        }
+    }
+    return 0;
+}
+
+//helper method to read stairs and place into dungeon
+int read_stairs(dungeon_t *d, FILE *f){
+    uint16_t stairs;
+    uint8_t x, y;
+
+    fread(&stairs, 2, 1, f);
+    stairs = be16toh(stairs);
     
+    //up
+    while(stairs--){
+        fread(&x, 1, 1, f);
+        fread(&y, 1, 1, f);
+        dungeon[y][x] = '<';
+    }
+    //down
+    fread(&stairs, 2, 1, f);
+    stairs = be16toh(stairs);
+    while(stairs--){
+        fread(&x, 1, 1, f);
+        fread(&y, 1, 1, f);
+        dungeon[y][x] = '>';
+    }
+    return 0;
+}
+
+void load_dungeon(dungeon_t *d){
+    char semantic[sizeof("RLG327-S2025")];
+    FILE *f;
+    uint32_t save_to32;
+
+    fread(semantic, sizeof("RLG327-S2025") - 1, 1, f);
+    fread(&save_to32, sizeof(save_to32), 1, f);
+    fread(&save_to32, sizeof(save_to32), 1, f);
+
+    fread(&d->PC.x, 1, 1, f);
+    fread(&d->PC.y, 1, 1, f);
+
+    read_dungeon_map(d, f);
+    
+    read_rooms(d, f);
+
+    read_stairs(d, f);
+
+    fclose(f);
 }
 
 
